--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 :root {
-    --neon-blue :#03D8F3;
-
+    --neon-blue:#03D8F3;
+    --yellow: #FCEE0C;
+    --dark-gray: #8F8389;
+    --light-gray: #FCEFEF;
 }
 
 
@@ -30,30 +32,46 @@
 
 
 .header {
-    background-color: #000;
-    padding: 35px;
+    background-color: var(--yellow);
+    padding: 25px;
 }
 
+/* Resize and fix logo
+#logo {
+    height: 150px;
+    margin-bottom: 0 !important;
+    max-width: 250px;
+     width: 250px;
+}
+*/
+
 #nav {
-    float:right;
+    float: right;
 }
 
 #nav a {
     text-decoration: none;
-    color: var(--neon-blue);
-    border-left: 1px solid var(--neon-blue);
-    padding: 5px;
-    margin-right: 30px;
+    color: #000;
+    border-left: 2px solid var(--neon-blue);
+    padding: 20px;
+    margin-right: 50px;
     font-family: 'montserrat-bold';
+    display: inline-block;
+}
+
+/* Need to figure out how to make it reach entire width */
+#nav li:hover {
+    background-color: rgba(0, 0, 0, .25);
+    border: 2px solid var(--neon-blue);
 }
 
 .header div ul li {
     display: inline-block;
-    margin-left: 25px;
 }
 
 .header div ul {
     list-style-type: none;
+    margin-top: 25px;
 }
 
 .header-image {
@@ -62,6 +80,8 @@
 
 .header-image img {
     mask-image: linear-gradient(to right, rgba(0,0,0,1), rgba(0, 0, 0, .25));
+    height: 650px;
+    width: 100%;
 }
 
 .header-image #base {
@@ -69,7 +89,7 @@
     font-family: 'violence', sans-serif;
     font-size: 6em; 
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
 }
 
@@ -78,6 +98,6 @@
     font-family: 'violence', sans-serif;
     font-size: 6em; 
     position: absolute;
-    top: 49.5%;
+    top: 39.5%;
     left: 50%;
 }
