--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ h2 {
 p {
     margin-bottom: 20px;
     line-height: 1.4em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /*
@@ -179,20 +180,42 @@ div {
     text-align: center;
 }
 
+.row {
+    margin: 0 -5px;
+}
+
+.row:after {
+    display: table;
+    clear: both;
+}
+
+.column {
+    float: left;
+    width: 33%;
+    padding: 0 10px;
+}
+
 .card {
     border-style: solid;
     border-width: 1px;
-    border-radius: 50px;
     padding: 10px;
     box-shadow: 10px 10px 5px #aaaaaa;
     margin: 20px;
-  }
+    transform: skew(-10deg);
+}
 
-  .card p {
+.card:hover {
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    margin: 20px;
+}
+
+.card img {
+    width: 100%; 
+}
+
+.card p {
     text-align: center;
-  }
-  
-  .card img {
-    width: 50%;
-  }
-  
+}
