--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ div {
 
 .row {
     margin: 0 -5px;
+    height: 300px;
 }
 
 .row:after {
@@ -191,7 +192,7 @@ div {
 
 .column {
     float: left;
-    width: 33%;
+    width: 32%;
     padding: 0 10px;
 }
 
@@ -206,10 +207,11 @@ div {
 
 .card:hover {
     border-style: solid;
-    border-width: 1px;
+    border-width: 10px;
     padding: 10px;
     box-shadow: 10px 10px 5px #aaaaaa;
     margin: 20px;
+    color: #000;
 }
 
 .card img {
