--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,11 +61,9 @@ div {
     overflow: hidden;
 }
 
-/* Resize and fix logo */
 .logo {
     margin-left: 30px;
 }
-
 
 #nav {
     float: right;
@@ -95,38 +93,30 @@ div {
     margin-top: 25px;
 }
 
-/* Test 
+
 .header-image {
     background-color: #000;
-    position: relative;
 }
-*/
+
 
 .header-image h1 {
     color: var(--yellow);
     font-family: 'violence', sans-serif;
     font-size: 6em;
     position: absolute;
-    top: 33%;
+    top: 250px;
+    /* find left in pixels */
     left: 45%;
     text-shadow: 2px 3px var(--neon-blue);
 }
 
 .header-image img {
-    mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, .25));
-    height: 650px;
+    mask-image: linear-gradient(to right, rgba(255, 0, 0, 1), rgba(255, 0, 0, .5));
+    height: 450px;
     width: 100%;
-    background-color: #000;
     position: relative;
+    display: block;
 }
-
-/* Not sure if this is needed...
-.content {
-    width: 100%;
-    display: inline;
-    margin-left: 20px;
-}
-*/
 
 .float-left {
     float: left;
@@ -136,7 +126,7 @@ div {
 
 .format {
     background-color: #fff;
-    padding: 90px 50px 125px 30px;
+    padding: 70px 50px 125px 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -156,6 +146,7 @@ div {
     width: 317px;
     margin-top: 65px;
     margin-left: 20px;
+    margin-bottom: 51px;
 }
 
 
@@ -272,30 +263,16 @@ div {
     margin-top: 20px;
 }
 
+/* Media Query Responsiveness */
 
-/* Media query responsiveness */
-@media screen and (max-width:1920px) {
-    .et_pb_fullwidth_slider_0 .et_pb_slide {
-        background-size: contain !important;
-        height: 600px !important;
+/*Mobile */
+/*Update float left on profile picture */
+@media only screen and (max-width: 767px) {
+    h2 {
+        font-size: 55px;
+        text-align: center;
     }
-}
 
-@media screen and (max-width:1200px) {
-    .et_pb_fullwidth_slider_0 .et_pb_slide {
-        background-size: contain !important;
-        height: 462px !important;
-    }
-}
-
-@media screen and (max-width:900px) {
-    .et_pb_fullwidth_slider_0 .et_pb_slide {
-        background-size: contain !important;
-        height: 346px !important;
-    }
-}
-
-@media screen and (max-width:479px) {
     .logo {
         display: block;
         margin-left: 100px;
@@ -313,6 +290,11 @@ div {
         display: block;
     }
 
+    #nav li:hover {
+        background-color: none;
+        border: none;
+    }
+
     #nav a {
         border-bottom: 2px solid var(--neon-blue);
         border-left: none;
@@ -321,8 +303,134 @@ div {
         width: 100%;
     }
 
-.header-image h1 {
+    .header-image img {
+        height: 300px;
+    }
 
+    .header-image h1 {
+        font-size: 3em;
+        /* change into pixels */
+        top: 50%;
+        left: 16%;
+    }
+
+    .profile-picture img {
+        width: 150px;
+        margin-top: 0;
+        margin-left: 60px;
+        margin-bottom: 40px;
+    }
+
+    .format {
+        padding: 25px 25px 100px 25px;
+    }
+
+    .contact {
+        float: inline-start;
+        transform: none;
+        margin-left: 50px;
+        margin-top: 0;
+    }
+
+    .form {
+        width: 80%;
+    }
+
+    .logos li {
+        margin-top: 20px;
+    }
+
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    .logos img {
+        margin-left: 35px;
+    }
 }
 
+/* Tablet Responsiveness */
+@media (max-width: 900px) {
+    h2 {
+        font-size: 55px;
+        text-align: center;
+    }
+
+    .logo {
+        display: block;
+        margin-left: 100px;
+        margin-right: auto;
+        width: 40%;
+    }
+
+    #nav {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .header div ul li {
+        display: block;
+    }
+
+    #nav li:hover {
+        background-color: none;
+        border: none;
+    }
+
+    #nav a {
+        border-bottom: 2px solid var(--neon-blue);
+        border-left: none;
+        margin: 0;
+        float: none;
+        width: 100%;
+    }
+
+    .header-image img {
+        height: 300px;
+    }
+
+    .header-image h1 {
+        font-size: 3em;
+        top: 93%;
+        left: 16%;
+    }
+
+    .profile-picture img {
+        width: 150px;
+        margin-top: 0;
+        margin-left: 60px;
+        margin-bottom: 40px;
+    }
+
+    .format {
+        padding: 25px 25px 100px 25px;
+    }
+
+    .contact {
+        float: inline-start;
+        transform: none;
+        margin-left: 50px;
+        margin-top: 0;
+    }
+
+    .form {
+        width: 80%;
+    }
+
+    .logos li {
+        margin-top: 20px;
+    }
+
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    .logos img {
+        margin-left: 35px;
+    }
 }
